--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <!-- header section start -->
     <header class="container">
       <!-- navbar start -->
       <nav class="navbar navbar-expand-lg navbar-light  ">
@@ -56,26 +57,32 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
-              <div class="carousel-caption">
-                <h5>Get Started Digital Learning</h5>
+              <div class="carousel-caption d-flex justify-content-center align-items-center">
+                <div class="mb-4">
+                  <h1 class="display-2 fw-bold lh-1">Get Started Digital Learning </h1>
                 <p>It i blished fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
                 <p><a class="btn btn-primary mt-3" href="#">Get Started</a></p>
+                </div>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
-              <div class="carousel-caption ">
-                <h5>Get Started Digital Learning</h5>
+              <img src="images/cover/cover-2 (1).jpg" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-flex justify-content-center align-items-center">
+                <div class="mb-4">
+                  <h1 class="display-2 fw-normal lh-1">Get Started Digital Learning </h1>
                 <p>It i blished fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
                 <p><a class="btn btn-primary mt-3" href="#">Get Started</a></p>
+                </div>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
-              <div class="carousel-caption ">
-                <h5>Get Started Digital Learning</h5>
+              <img src="images//cover/cover-3.jpg" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-flex justify-content-center align-items-center">
+                <div class="mb-4">
+                  <h1 class="display-2 fw-bold lh-1">Get Started Digital Learning </h1>
                 <p>It i blished fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-                <p><a class="btn btn-primary mt-3" href="#">Get Started</a></p>  
+                <p><a class="btn btn-primary mt-3" href="#">Get Started</a></p>
+                </div>
               </div>
             </div>
           </div>
@@ -89,8 +96,135 @@
           </button>
         </div>
       </section>
+      <!-- banner section end -->
     </header>
-   
+    <!-- header section end -->
+
+    <!-- main sectin start -->
+   <main>
+    <section class="container my-5" id="course">
+      <div class="popular-course">
+          <div class="course-title text-center py-4">
+              <h1 class="mb-2"><strong>Discover Our Popular <br> Courses</strong></h1>
+              <p>It has been developed to provide an officially recognised route of learning for the whole
+                  workforce.
+              </p>
+          </div>
+
+          <!-- courses  -->
+          <div class="container">
+              <div class="row gx-5 gy-5">
+                  <div class="col-lg-6 col-md-12 col-sm-12">
+                      <div class="container">
+                          <div class="row gy-3">
+                              <!-- single course  -->
+                              <div class="col-12">
+                                  <div class="row d-lg-flex d-md-flex align-items-center border rounded">
+                                      <div class="col-lg-4 col-md-4">
+                                          <img src="images/course/course-1.png" class="img-fluid w-100" alt="">
+                                      </div>
+                                      <div class="col-lg-8 col-md-8 p-2">
+                                          <h5>Fundamental Of UI/UX Design</h5>
+                                          <p>User experience design (UX design, UXD, UED, or XD) is the process of
+                                              creating
+                                              evidence-based</p>
+                                          <h4 class="text-primary"><strong>Price: $20</strong></h4>
+                                      </div>
+                                  </div>
+                              </div>
+                              <!--single course -->
+                              <div class="col-12">
+                                  <div class="row d-lg-flex d-md-flex align-items-center border rounded">
+                                      <div class="col-lg-4 col-md-4">
+                                          <img src="images/course/course-3.png" class="img-fluid w-100" alt="">
+                                      </div>
+                                      <div class="col-lg-8 col-md-8 p-2">
+                                          <h5>Fullstack Web Development</h5>
+                                          <p>Full Stack; Full Stack Developer Course Syllabus. Since learning Full
+                                              Stack is a comprehensive program </p>
+                                          <h4 class="text-primary"><strong>Price: $20</strong></h4>
+                                      </div>
+                                  </div>
+                              </div>
+                              <!--single course -->
+                              <div class="col-12">
+                                  <div class="row d-lg-flex d-md-flex align-items-center border rounded">
+                                      <div class="col-lg-4 col-md-4">
+                                          <img src="images/course/course-5.png" class="img-fluid w-100" alt="">
+                                      </div>
+                                      <div class="col-lg-8 col-md-8 p-2">
+                                          <h5>Photography Basic Rules</h5>
+                                          <p>The golden ratio is a ratio of approximately 1.618 to 1. It has been
+                                              used for centuries by artists, architects, and musicians, </p>
+                                          <h4 class="text-primary"><strong>Price: $20</strong></h4>
+                                      </div>
+                                  </div>
+                              </div>
+
+                          </div>
+                      </div>
+
+                  </div>
+
+                  <!-- right side course  -->
+                  <div class="col-lg-6 col-md-12 d-none d-sm-block">
+                      <div class="container">
+                          <div class="row gy-3">
+                               <!--single course -->
+                              <div class="col-12">
+                                  <div class="row d-lg-flex d-md-flex align-items-center border rounded">
+                                      <div class="col-lg-4 col-md-4">
+                                          <img src="images/course/course-2.png" class="img-fluid w-100" alt="">
+                                      </div>
+                                      <div class="col-lg-8 col-md-8 p-2">
+                                          <h5>Javascript Basic to advanced</h5>
+                                          <p>Learn JavaScript with this complete course on the market. From
+                                              beginner to advanced. Join millions of learners</p>
+                                          <h4 class="text-primary"><strong>Price: $56</strong></h4>
+                                      </div>
+                                  </div>
+                              </div>
+                                <!--single course -->
+                              <div class="col-12">
+                                  <div class="row d-lg-flex d-md-flex align-items-center border rounded">
+                                      <div class="col-lg-4 col-md-4">
+                                          <img src="images/course/course-4.png" class="img-fluid w-100" alt="">
+                                      </div>
+                                      <div class="col-lg-8 col-md-8 py-2">
+                                          <h5>Digital marketing</h5>
+                                          <p>Digital marketing, also called online marketing, is the promotion of
+                                              brands to connect </p>
+                                          <h4 class="text-primary"><strong>Price: $33</strong></h4>
+                                      </div>
+                                  </div>
+                              </div>
+                               <!--single course -->
+                              <div class="col-12">
+                                  <div class="row d-lg-flex d-md-flex align-items-center border rounded">
+                                      <div class="col-lg-4 col-md-4">
+                                          <img src="images/course/course-6.png" class="img-fluid w-100" alt="">
+                                      </div>
+                                      <div class="col-lg-8 col-md-8 py-2">
+                                          <h5>Motion Graphics</h5>
+                                          <p>Motion Graphics is about bringing the design knowledge to new mediums
+                                              by adding the elements of time and space to it</p>
+                                          <h4 class="text-primary"><strong>Price: $100</strong></h4>
+                                      </div>
+                                  </div>
+                              </div>
+
+                          </div>
+                      </div>
+                  </div>
+
+                </div>
+              <div class="d-lg-none justify-content-center mt-5 d-md-flex d-flex">
+                  <button class="btn btn-primary text-white px-5 py-2 fs-5  ">
+                      View all</button>
+              </div>
+          </div>
+  </section>
+   </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
 </html>
