--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
     <!-- main sectin start -->
    <main>
-    <section class="container my-5" id="course">
+    <section class="container my-5"">
       <div class="popular-course">
           <div class="course-title text-center py-4">
               <h1 class="mb-2"><strong>Discover Our Popular <br> Courses</strong></h1>
@@ -224,6 +224,59 @@
               </div>
           </div>
   </section>
+  <!-- join section start -->
+  <section class="py-5 container">
+    <div class="d-flex align-items-center bg-primary p-5 text-white rounded flex-column flex-md-row ">
+        <div>
+            <h1>Ready to join?</h1>
+            <p class="w-75">It is a long established fact that a reader will be distracted by the
+                readable content of a page when looking at its layout</p>
+        </div>
+
+        <div>
+            <button class="btn btn-light text-primary px-5 py-2 fs-5" data-bs-toggle="modal"
+                data-bs-target="#exampleModal">
+                Register</button>
+        </div>
+        <!-- modal button   -->
+        <div class="modal fade text-dark" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title " id="exampleModalLabel">Register form</h5><br>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                            aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="mb-3">
+                            <label for="exampleFormControlInput1" class="form-label">Full name</label>
+                            <input type="text" class="form-control" id="exampleFormControlInput1"
+                                placeholder="enter your full name">
+
+                            <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                            <input type="email" class="form-control" id="exampleFormControlInput1"
+                                placeholder="name@example.com">
+
+                            <label for="exampleFormControlInput1" class="form-label">Mobile number</label>
+                            <input type="number" class="form-control" id="exampleFormControlInput1"
+                                placeholder="+88010000000">
+
+                            <label for="exampleFormControlInput1" class="form-label">Type a new password</label>
+                            <input type="password" class="form-control" id="exampleFormControlInput1"
+                                placeholder="chose a new password">
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary">Register</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+  <!-- join section end -->
    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
