--- a/index.html
+++ b/index.html
@@ -277,6 +277,162 @@
     </div>
 </section>
   <!-- join section end -->
+  <!-- Successfull students section -->
+  <section class="container my-5 py-4d">
+    <div class="title">
+        <h1><strong>Meet Our Successfull <br> students</strong></h1>
+        <p class="w-50">Online courses are often provided by Learning Management Systems (LMSs) and allow
+            learning material
+            to be delivered at a steady rate</p>
+    </div>
+    <div>
+        <div class="card-group pt-5">
+            <!-- single card 1 -->
+            <div class="card m-2 border rounded-4">
+                <img src="images/student/student-1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Imran Hossain</h5>
+                    <p class="card-text">UIUX Designer</p>
+                </div>
+            </div>
+            <!-- single card 2 -->
+            <div class="card m-2 border rounded-4">
+                <img src="images/student/student-2.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Jannatul Islam</h5>
+                    <p class="card-text">Motion Design</p>
+                </div>
+            </div>
+            <!-- single card 3 -->
+            <div class="card m-2 border rounded-4">
+                <img src="images/student/student-3.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Imran Hossain</h5>
+                    <p class="card-text">Graphic Designer</p>
+                </div>
+            </div>
+            <!-- single card 4 -->
+            <div class="card m-2 border rounded-4">
+                <img src="images/student/student-4.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Nishi Akter</h5>
+                    <p class="card-text">Web Developer</p>
+                </div>
+            </div>
+
+        </div>
+        <div class="d-flex justify-content-center mt-5">
+            <button class="btn btn-primary text-white px-5 py-2 fs-5  ">
+                view all</button>
+        </div>
+    </div>
+</section>
+  <!-- Successfull students section -->
+
+  <!-- faq section start -->
+  <section class="container">
+    <div class=" d-flex flex-column align-items-center">
+
+        <div class="course-title text-center py-4 ">
+            <h1 class="mb-2"><strong>Frequently Asked Questions</strong></h1>
+            <p>Expert-led courses for developers & IT professionals. Free 10-day trial - Start
+                today!
+                Learn web
+                development
+            </p>
+        </div>
+
+        <div class="w-75">
+            <div class="accordion" id="accordionPanelsStayOpenExample">
+
+                <!-- single accordian 1 -->
+                <div class="accordion-item mb-3 p-2 border">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
+                            aria-controls="panelsStayOpen-collapseOne">
+                            What are the differences between flexbox & grid?
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
+                        aria-labelledby="panelsStayOpen-headingOne">
+                        <div class="accordion-body">
+                            Grid is made for two-dimensional layout while Flexbox is for one. This means
+                            Flexbox can work on either row or columns at a time, but Grids can work on both.
+                            Flexbox, gives you more flexibility while <code>
+                                working on either element
+                            </code> (row or
+                            column)
+                        </div>
+                    </div>
+                </div>
+
+                <!-- single accordian 2 -->
+                <div class="accordion-item mb-3 p-2 border">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="true"
+                            aria-controls="panelsStayOpen-collapseTwo">
+                            What are the differences between Bootstrap & Tailwind?
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
+                        aria-labelledby="panelsStayOpen-headingTwo">
+                        <div class="accordion-body">
+                            Bootstrap comes with a set of pre-styled responsive, mobile-first components that
+                            possess a definite UI kit. Tailwind CSS uses a set of utility classes to create a
+                            neat UI with more flexibility and uniqueness. Sites created using Bootstrap follow
+                            the generic pattern that makes them look identical.
+                        </div>
+                    </div>
+                </div>
+
+                <!-- single accordian 3 -->
+                <div class="accordion-item mb-3 p-2 border">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="true"
+                            aria-controls="panelsStayOpen-collapseThree">
+                            What is the css box model ?
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse "
+                        aria-labelledby="panelsStayOpen-headingThree">
+                        <div class="accordion-body">
+                            In CSS, the term "box model" is used when talking about design and layout.
+
+                            The CSS box model is essentially a box that wraps around every HTML element. It
+                            consists of: margins, borders, padding, and the actual content. The image below
+                            illustrates the box model:
+                        </div>
+                    </div>
+                </div>
+
+                <!-- single accordian 4 -->
+                <div class="accordion-item mb-3 p-2 border">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingFour">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="true"
+                            aria-controls="panelsStayOpen-collapseFour">
+                            What is the semantic Tag?
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse "
+                        aria-labelledby="panelsStayOpen-headingFour">
+                        <div class="accordion-body">
+                            The HTML semantics refers to the tags that provide meaning to an HTML page rather
+                            than just presentation. It makes HTML more comprehensible by better defining the
+                            different sections and layout of web pages.
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+    </div>
+</section>
+  <!-- faq section end -->
    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
