--- a/index.html
+++ b/index.html
@@ -433,6 +433,25 @@
     </div>
 </section>
   <!-- faq section end -->
+
+  <!-- trusted company section  start-->
+  <section class="my-4 py-5 container">
+    <div class="course-title text-center py-4 ">
+        <h1 class="mb-2"><strong>Trusted by over 500+ companies</strong></h1>
+    </div>
+
+    <div class="logosofCom ">
+        <div class="row d-flex text-center justify-content-center align-items-center gy-3">
+            <div class="col-md-2"><img class="img-fluid" src="images/company/company-1.png" alt=""></div>
+            <div class="col-md-2"><img class="img-fluid" src="images/company/company-2.png" alt=""></div>
+            <div class="col-md-2"><img class="img-fluid" src="images/company/company-3.png" alt=""></div>
+            <div class="col-md-2"><img class="img-fluid" src="images/company/company-4.png" alt=""></div>
+            <div class="col-md-2"><img class="img-fluid" src="images/company/company-5.png" alt=""></div>
+            <div class="col-md-2"><img class="img-fluid" src="images/company/company-6.png" alt=""></div>
+        </div>
+    </div>
+</section>
+  <!-- trusted company section  end-->
    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
